--- a/cfgs/convlstm/wandb_table5.yaml
+++ b/cfgs/convlstm/wandb_table5.yaml
@@ -3,7 +3,7 @@ command:
   - python
   - ${program}
   - -c
-  - cfgs/unet/res18_monotemporal.yaml
+  - cfgs/convlstm/full_run.yaml
   - --trainer
   - cfgs/trainer_single_gpu.yaml
   - --data
@@ -14,7 +14,6 @@ metric:
   goal: maximize
   name: test_AP
 parameters:
-  # Chosen to have each year as the test set once
   data.data_fold_id:
     values:
       - 0
@@ -31,20 +30,17 @@ parameters:
       - 11
   data.features_to_keep:
     values:
-      - [3, 38, 39] # NDVI + Fire
-      - [4, 38, 39] # EVI2 + Fire
-      - [0, 1, 2, 38, 39] # VIIRS observations instead of NDVI
+      - [0, 1, 2, 3, 4, 38, 39] # Vegetation + Active Fire
+      - [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 38, 39] # Multi: Vegetation, Landcover, Topography, Weather, Active fire
+      - None # All features
   data.n_leading_observations:
-    values:
-      - 1
-      - 2
-      - 3
-      - 4
-      - 5
-  data.remove_duplicate_features:
-    value: true
+    value: 5
   trainer.max_steps: 
     value: 10000
+  data.batch_size:
+    value: 32
+  model.init_args.num_layers:
+    value: 1
   do_test:
     value: True
 program: src/train.py
