--- a/cfgs/unet/wandb_table3.yaml
+++ b/cfgs/unet/wandb_table3.yaml
@@ -1,9 +1,13 @@
+# Ablation: Vegetation 
+# We compare EVI2, NDVI and VIIRS reflectance as sources for
+# vegetation data, combined with fire masks.
+
 command:
   - ${env}
   - python
   - ${program}
   - -c
-  - cfgs/convlstm/full_run.yaml
+  - cfgs/unet/res18_monotemporal.yaml
   - --trainer
   - cfgs/trainer_single_gpu.yaml
   - --data
@@ -30,17 +34,20 @@ parameters:
       - 11
   data.features_to_keep:
     values:
-      - [0, 1, 2, 3, 4, 38, 39] # Vegetation
-      - [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 38, 39] # Vegetation, Topography, Land cover, Weather
-      - None  # All features
+      - [3, 38, 39] # NDVI + Active fire
+      - [4, 38, 39] # EVI2 + Active fire
+      - [0, 1, 2, 38, 39] # VIIRS + Active fire
   data.n_leading_observations:
-    value: 5
-  trainer.max_steps: 
-    value: 10000
-  data.batch_size:
-    value: 32
-  model.init_args.num_layers:
-    value: 1
+    values:
+      - 1
+      - 2
+      - 3
+      - 4
+      - 5
+  data.remove_duplicate_features:
+    value: true
   do_test:
-    value: True
+    value: true
+  trainer.max_steps:
+    value: 10000
 program: src/train.py
