--- a/cfgs/unet/wandb_table4.yaml
+++ b/cfgs/unet/wandb_table4.yaml
@@ -1,3 +1,7 @@
+# Ablation: Non-vegetation 
+# We compare all non-vegetation features, individually combined
+# with the fire masks as input features. 
+
 command:
   - ${env}
   - python
@@ -14,7 +18,6 @@ metric:
   goal: maximize
   name: test_AP
 parameters:
-  # Chosen to have each year as the test set once
   data.data_fold_id:
     values:
       - 0
@@ -31,11 +34,11 @@ parameters:
       - 11
   data.features_to_keep:
     values:
-      - [12, 13, 14, 38, 39] # Topography
-      - [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 38, 39] # Landcover, one-hot encoded
-      - [10, 15, 38, 39] # ERC, drought index
-      - [5, 6, 7, 8, 9, 11, 38, 39] # Current weather
-      - [33, 34, 35, 36, 37, 38, 39] # weather forecast
+      - [12, 13, 14, 38, 39] # Topography + Active fire
+      - [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 38, 39] # Landcover + Active fire
+      - [10, 15, 38, 39] # ERC & Drought + Active fire
+      - [5, 6, 7, 8, 9, 11, 38, 39] # Weather + Active fire
+      - [33, 34, 35, 36, 37, 38, 39] # Weather forecast + Active fire
   data.n_leading_observations:
     values:
       - 1
@@ -45,8 +48,8 @@ parameters:
       - 5
   data.remove_duplicate_features:
     value: true
-  trainer.max_steps: 
-    value: 10000
   do_test:
-    value: True
+    value: true
+  trainer.max_steps:
+    value: 10000
 program: src/train.py
